[gd_scene load_steps=13 format=3 uid="uid://bxv3wcdk25ri7"]

[ext_resource type="PackedScene" path="res://VPSScenes/Minigame/Player.tscn" id="1"]
[ext_resource type="Script" path="res://VPSScripts/Minigame/TamagotchiMinigameScreen.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dfl7a11aavham" path="res://Resources/Graphics/Minigame/UI/heart_icon.png" id="3"]
[ext_resource type="PackedScene" path="res://VPSScenes/Minigame/EnemyFan.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://btixo12wg1o8t" path="res://Resources/Graphics/Minigame/UI/shoot_icon.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dfs5j8ukbfii0" path="res://Resources/Graphics/Minigame/UI/left_arrow.png" id="6"]
[ext_resource type="Texture2D" uid="uid://06845tlnjayc" path="res://Resources/Graphics/Minigame/UI/exit_icon.png" id="7"]
[ext_resource type="Texture2D" uid="uid://l6m7xmwpvvpi" path="res://Resources/Graphics/Minigame/UI/right_arrow.png" id="8"]
[ext_resource type="FontFile" path="res://Resources/Fonts/joystix.tres" id="9"]
[ext_resource type="Material" uid="uid://3tb8733jaxk6" path="res://Resources/AlphaScissor.tres" id="10"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(7.81548, 71.3524)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(45.4281, 10)

[node name="MinigameScreen" type="Container" groups=["minigame_objects"]]
clip_contents = true
offset_left = 3.0
offset_top = 5.0
offset_right = 67.0
offset_bottom = 76.0001
script = ExtResource("2")

[node name="Left" type="Sprite2D" parent="."]
position = Vector2(6, 1)
texture = ExtResource("6")
centered = false

[node name="Shoot" type="Sprite2D" parent="."]
position = Vector2(20, 0)
texture = ExtResource("5")
centered = false

[node name="Right" type="Sprite2D" parent="."]
position = Vector2(40, 1)
texture = ExtResource("8")
centered = false

[node name="Exit" type="Sprite2D" parent="."]
position = Vector2(54, 0)
texture = ExtResource("7")
centered = false

[node name="HeartContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Heart" type="TextureRect" parent="HeartContainer"]
layout_mode = 2
texture = ExtResource("3")

[node name="Heart2" type="TextureRect" parent="HeartContainer"]
layout_mode = 2
texture = ExtResource("3")

[node name="Heart3" type="TextureRect" parent="HeartContainer"]
layout_mode = 2
texture = ExtResource("3")

[node name="Player" parent="." instance=ExtResource("1")]
position = Vector2(30, 24)
scale = Vector2(1, 1)

[node name="EnemySpawnPosition1" type="Marker2D" parent="."]
position = Vector2(5, 73)

[node name="EnemySpawnPosition2" type="Marker2D" parent="."]
position = Vector2(61, 73)

[node name="OutOfBoundsArea" type="Area2D" parent="."]
position = Vector2(-68.9486, -4.96664)
collision_layer = 16
collision_mask = 14

[node name="Left" type="CollisionShape2D" parent="OutOfBoundsArea"]
position = Vector2(48, 47)
shape = SubResource("1")

[node name="Right" type="CollisionShape2D" parent="OutOfBoundsArea"]
position = Vector2(154, 47)
shape = SubResource("1")

[node name="Top" type="CollisionShape2D" parent="OutOfBoundsArea"]
position = Vector2(101, -15)
shape = SubResource("2")

[node name="Top2" type="CollisionShape2D" parent="OutOfBoundsArea"]
position = Vector2(101, 109)
shape = SubResource("2")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="DifficultyIncreaseTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="PlayerShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Enemy" parent="." instance=ExtResource("4")]
position = Vector2(31.1977, 75.4453)

[node name="ScoreLabel" type="Label" parent="."]
material = ExtResource("10")
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9")
text = "0"

[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="DifficultyIncreaseTimer" to="." method="_on_DifficultyIncreaseTimer_timeout"]
[connection signal="death" from="Enemy" to="." method="_on_Enemy_death"]
